--- a/FootballManagerApp/FootballManagerApp/Controller/MainViewController.xib
+++ b/FootballManagerApp/FootballManagerApp/Controller/MainViewController.xib
@@ -20,6 +20,23 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="tf0-5m-JvR">
+                    <rect key="frame" x="27" y="184" width="266.5" height="65"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Collect your team" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E8a-ns-oFQ">
+                            <rect key="frame" x="0.0" y="0.0" width="266.5" height="30"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                            <color key="textColor" name="gold"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add Player by pressing +" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="keY-HS-bMq">
+                            <rect key="frame" x="0.0" y="35" width="266.5" height="30"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                            <color key="textColor" name="gold"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                </stackView>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nQJ-ls-jN5">
                     <rect key="frame" x="0.0" y="39" width="320" height="529"/>
                     <connections>
@@ -44,6 +61,8 @@
             <constraints>
                 <constraint firstItem="nQJ-ls-jN5" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="5M5-tk-FuG"/>
                 <constraint firstItem="JdV-BY-8Ld" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="D9m-Em-ldb"/>
+                <constraint firstItem="tf0-5m-JvR" firstAttribute="top" secondItem="JdV-BY-8Ld" secondAttribute="bottom" constant="153" id="FZS-Rv-hZM"/>
+                <constraint firstItem="tf0-5m-JvR" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="TYo-nP-i3m"/>
                 <constraint firstItem="nQJ-ls-jN5" firstAttribute="top" secondItem="JdV-BY-8Ld" secondAttribute="bottom" constant="8" id="es5-Zw-bfm"/>
                 <constraint firstItem="nQJ-ls-jN5" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="fNH-nd-kWr"/>
                 <constraint firstItem="nQJ-ls-jN5" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="o55-YN-0BG"/>
